--- a/app/Resources/views/course_info/info/info.html.twig
+++ b/app/Resources/views/course_info/info/info.html.twig
@@ -2,9 +2,21 @@
 
 {% block subContent %}
 
-    <section>
-        {% include('course_info/info/view/info.html.twig') %}
-    </section>
+    <div class="card my-2 shadow card-syllabus"
+         data-view-url="{{ path('course_info_convenient_view', {'id': courseInfo.id }) }}"
+         data-form-url="{{ path('course_info_convenient_form', {'id': courseInfo.id }) }}"
+    >
+        <div class="card-header">
+            <div class="d-flex justify-content-between">
+                <h3>Informations pratiques</h3>
+                <button type="button" class="edit-button btn btn-primary rounded">
+                    Mettre à jour
+                </button>
+            </div>
+        </div>
+        <div class="card-body">
+        </div>
+    </div>
 
 {% endblock %}
 
