--- a/app/Resources/views/course_info/objectives_course/form/remove_achievement.html.twig
+++ b/app/Resources/views/course_info/objectives_course/form/remove_achievement.html.twig
@@ -2,7 +2,7 @@
 {{ form_errors(form) }}
 <h5>Êtes-vous sûr(e) de vouloir supprimer la compétence "{{ form.vars.data.description }}" ?</h5>
 <div class="d-flex justify-content-center">
-    <button type="submit" class="btn btn-danger button-gradient mr-2">Supprimer</button>
+    <button type="submit" class="btn btn-danger rounded mr-2">Supprimer</button>
 </div>
 {{ form_widget(form._token) }}
 {{ form_end(form) }}
