--- a/app/Resources/views/course_info/objectives_course/objectives_course.html.twig
+++ b/app/Resources/views/course_info/objectives_course/objectives_course.html.twig
@@ -9,7 +9,7 @@
             <div class="d-flex justify-content-between">
                 <h3>Capacités visées / acquis d'apprentissage</h3>
                 <button type="button"
-                        class="btn btn-primary button-gradient modal-action"
+                        class="btn btn-primary rounded modal-action"
                         data-action-title="Ajouter une compétence"
                         data-action-url="{{ path('objective_course_achievement', {'id': courseInfo.id }) }}">
                     Ajouter une compétence
@@ -59,13 +59,15 @@
                         .toggle.ios, .toggle-on.ios, .toggle-off.ios {
                             border-radius: 20px;
                         }
-
+                        .toggle-off {
+                            padding-left: 1rem !important;
+                        }
                         .toggle.ios .toggle-handle {
                             border-radius: 20px;
                         }
                     </style>
                     <input type="checkbox" data-toggle="toggle" data-style="ios" id="btn_tutoring" data-on="Oui"
-                           data-off="Non"
+                           data-off="non"
                             {% if courseInfo.tutoring %}
                                 checked
                             {% endif %}
@@ -88,6 +90,7 @@
 
             $('#btn_tutoring').change(function () {
                 let checkedValue = $(this).prop('checked');
+                checkedValue = checkedValue === true ? 1 : 0;
                 let url = "{{ path('objective_course_tutoring', {'id': courseInfo.id, 'action': 'checkedValue'}) }}";
                 url = url.replace("checkedValue", checkedValue);
                 $.ajax({
@@ -95,12 +98,10 @@
                     method: "POST",
                     dataType: "html",
                     success: function (data) {
-                        const obj = JSON.parse(data);
-                        console.log('ok : ' + obj.status);
+                        window.location.reload()
                     }
                 });
             })
-
         });
     </script>
 {% endblock %}
