--- a/app/Resources/views/course_info/evaluation/form/specifications.html.twig
+++ b/app/Resources/views/course_info/evaluation/form/specifications.html.twig
@@ -9,7 +9,7 @@
 {{ form_errors(form.mccAdvice) }}
 {{ form_widget(form.mccAdvice) }}
 <div class="mt-2">
-    <button type="button" class="submit-button btn btn-primary submit rounded" data-url="{{ path('course_evaluation_specifications_view', {'id': courseInfo.id}) }}">
+    <button type="submit" class="submit-button btn btn-primary submit rounded" data-url="{{ path('course_evaluation_specifications_view', {'id': courseInfo.id}) }}">
         Sauvegarder
     </button>
     <button type="button" class="cancel-button btn btn-secondary rounded" data-url="{{ path('course_evaluation_specifications_view', {'id': courseInfo.id}) }}">
