--- a/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
@@ -304,7 +304,7 @@
     </div>
 </div>
 <div class="mt-2">
-    <button type="button" class="submit-button btn btn-primary submit rounded" data-url="{{ path('course_presentation_teaching_mode_view', {'id': courseInfo.id}) }}">
+    <button type="submit" class="submit-button btn btn-primary submit rounded" data-url="{{ path('course_presentation_teaching_mode_view', {'id': courseInfo.id}) }}">
         Sauvegarder
     </button>
     <button type="button" class="cancel-button btn btn-secondary rounded" data-url="{{ path('course_presentation_teaching_mode_view', {'id': courseInfo.id}) }}">
