--- a/app/Resources/views/course_info/evaluation/evaluation.html.twig
+++ b/app/Resources/views/course_info/evaluation/evaluation.html.twig
@@ -31,7 +31,7 @@
             </div>
         </div>
     </section>
-    <div class="card toggle-focus my-2 shadow card-syllabus"
+    <div class="card my-2 shadow card-syllabus"
          data-view-url="{{ path('course_evaluation_specifications_view', {'id': courseInfo.id }) }}"
          data-form-url="{{ path('course_evaluation_specifications_form', {'id': courseInfo.id }) }}"
     >
