--- a/app/Resources/views/course_info/presentation/form/teachers.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teachers.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_presentation_teachers_form', {'id': courseInfo.id })}}) }}
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_presentation_teachers_form', {'id': courseInfo.id }), 'data-card': 'card-teacher'}}) }}
 {{ form_errors(form) }}
 <div class="row mt-3">
     <div class="col">
