--- a/app/Resources/views/course_info/presentation/presentation.html.twig
+++ b/app/Resources/views/course_info/presentation/presentation.html.twig
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <div class="card my-2 shadow card-syllabus"
+    <div id="card-teacher" class="card my-2 shadow card-syllabus"
          data-view-url="{{ path('course_presentation_teachers_view', {'id': courseInfo.id }) }}"
     >
         <div class="card-header">
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <div class="card toggle-focus my-2 shadow card-syllabus"
+    <div class="card my-2 shadow card-syllabus"
          data-view-url="{{ path('course_presentation_teaching_mode_view', {'id': courseInfo.id }) }}"
          data-form-url="{{ path('course_presentation_teaching_mode_form', {'id': courseInfo.id }) }}"
     >
