--- a/app/Resources/views/course_info/presentation/view/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/view/teaching_mode.html.twig
@@ -310,4 +310,88 @@
             </div>
         </div>
     </div>
+{% elseif courseInfo.teachingMode == "distant" %}
+    <h3>A distance</h3>
+    <div class="row mt-3">
+        <div class="col">
+            <div class="d-flex">
+                <div class="d-flex flex-column">
+                        <span class="font-weight-bold">
+                            {% if courseInfo.teachingCmDist is null %}
+                                <i class="fas fa-exclamation-circle text-danger"></i>
+                            {% endif %}
+                            Heures CM
+                        </span>
+                    {% if courseInfo.teachingCmDist is null %}
+                        <span class="text-danger">
+                                Non-renseigné
+                            </span>
+                    {% else %}
+                        <span class="text-muted">
+                                {{ courseInfo.teachingCmDist }}
+                            </span>
+                    {% endif %}
+                </div>
+            </div>
+            <div class="d-flex">
+                <div class="d-flex flex-column">
+                        <span class="font-weight-bold">
+                            {% if courseInfo.teachingTdDist is null %}
+                                <i class="fas fa-exclamation-circle text-danger"></i>
+                            {% endif %}
+                            Heures TD
+                        </span>
+                    {% if courseInfo.teachingTdDist is null %}
+                        <span class="text-danger">
+                                Non-renseigné
+                            </span>
+                    {% else %}
+                        <span class="text-muted">
+                                {{ courseInfo.teachingTdDist }}
+                            </span>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="d-flex">
+                <div class="d-flex flex-column">
+                            <span class="font-weight-bold">
+                                {% if courseInfo.teachingOtherDist is null %}
+                                    <i class="fas fa-exclamation-circle text-danger"></i>
+                                {% endif %}
+                                Heures autre
+                            </span>
+                    {% if courseInfo.teachingOtherDist is null %}
+                        <span class="text-danger">
+                                Non-renseigné
+                            </span>
+                    {% else %}
+                        <span class="text-muted">
+                                {{ courseInfo.teachingOtherDist }}
+                            </span>
+                    {% endif %}
+                </div>
+            </div>
+            <div class="d-flex">
+                <div class="d-flex flex-column">
+                            <span class="font-weight-bold">
+                                {% if courseInfo.teachingOtherTypeDist is null %}
+                                    <i class="fas fa-exclamation-circle text-danger"></i>
+                                {% endif %}
+                                Type
+                            </span>
+                    {% if courseInfo.teachingOtherTypeDist is null %}
+                        <span class="text-danger">
+                                Non-renseigné
+                            </span>
+                    {% else %}
+                        <span class="text-muted">
+                                {{ courseInfo.teachingOtherTypeDist }}
+                            </span>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endif %}
