--- a/app/Resources/views/course_info/presentation/form/remove_teacher.html.twig
+++ b/app/Resources/views/course_info/presentation/form/remove_teacher.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_presentation_remove_teacher', {'id': courseInfo.id, 'teacherId': form.vars.data.id}) }}) }}
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_presentation_remove_teacher', {'id': courseInfo.id, 'teacherId': form.vars.data.id}), 'data-card': 'card-teacher' }}) }}
 {{ form_errors(form) }}
 <h5>Êtes-vous sûr(e) de vouloir supprimer l'enseignant "{{ form.vars.data.lastname }} {{ form.vars.data.firstname }}" ?</h5>
 <div class="d-flex justify-content-center">
