activities tab creation

--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -30,7 +30,7 @@
                 <li class="nav-item has-treeview">
                     <a class="nav-link menu-tab"
                        id="menu-activities"
-                       href="{{ path('edit_activities_course_info', { 'id': courseInfo.id }) }}">
+                       href="{{ path('course_activities', { 'id': courseInfo.id }) }}">
                         <i>2</i>&nbsp;
                         <p>Contenu et activités</p>
                     </a>
