--- a/app/Resources/views/course_info/activities/activities.html.twig
+++ b/app/Resources/views/course_info/activities/activities.html.twig
@@ -1,6 +1,21 @@
 {% extends 'course_info/layout.html.twig' %}
 
 {% block subContent %}
+    <div class="row h-100">
+        <div class="col-3 px-0 d-block position-absolute bg-dark" style="top: 0; bottom: calc(1.9rem + 1px);">
+            <aside class="text-center bg-dark">
+                <div class="p-3 control-sidebar-content">
+                    <h5>Sections</h5>
+                    <hr class="mb-2">
+                    <div class="mb-1">Section 1</div>
+                    <div class="mb-1"><a class="text-primary" href="#"><i class="fas fa-plus-circle"></i> Ajouter une section</a></div>
+                </div>
+            </aside>
+        </div>
+        <div class="col bg-danger">
+
+        </div>
+    </div>
 {% endblock %}
 
 {% block javascripts %}
@@ -9,6 +24,10 @@
         $(document).ready(function() {
             $('#menu-activities').addClass('active');
             $('#menu-activities').addClass('border-bottom-3 border-white');
+
+            $('.content-wrapper .container-fluid').removeClass('pt-2').css('min-height', 'calc(100vh - ' + $('nav.main-header').outerHeight() + ')');
+
+
         });
     </script>
 {% endblock %}
