--- a/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
@@ -81,7 +81,7 @@
                     <h4 class="mb-2">Présentiel</h4>
                 </div>
                 <div class="col">
-                    <h4 class="mb-2">Distanciel</h4>
+                    <h4 class="mb-2">A distance</h4>
                 </div>
             </div>
             <div class="row">
@@ -143,164 +143,6 @@
                 </div>
             </div>
         </div>
-        {#<div class="row teaching-hours">
-            <div class="col-5 border-right">
-                <div class="row">
-                    <div class="col-5">
-                        <h6>{{ form_widget(form.teachingMode.children[0]) }}</h6>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col col-4 align-self-center">
-                        <img style="max-width: 130px;" class="w-100" src="{{ asset('images/in_class_128.png') }}">
-                    </div>
-                    <div class="col">
-                        <div class="row">
-                            <div class="col">
-                                {{ form_widget(form.teachingCmClass) }}
-                                <label placeholder="Heures CM"></label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                {{ form_widget(form.teachingTdClass) }}
-                                <label placeholder="Heures TD"></label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                {{ form_widget(form.teachingTpClass) }}
-                                <label placeholder="Heures TP"></label>
-                            </div>
-                        </div>
-                        {{ form_errors(form.teachingOtherTypeClass) }}
-                        <div class="row">
-                            <div class="col pr-1">
-                                {{ form_widget(form.teachingOtherClass) }}
-                                <label placeholder="Heures autre"></label>
-                            </div>
-                            <div class="col pl-1">
-                                {{ form_widget(form.teachingOtherTypeClass) }}
-                                <label placeholder="Type"></label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-7 border-left">
-                <div class="row">
-                    <div class="col-3">
-                        <h6 class="text-capitalize">{{ form_widget(form.teachingMode.children[1]) }}</h6>
-                    </div>
-                    <div class="col">
-                        <small>Présentiel</small>
-                    </div>
-                    <div class="col">
-                        <small>Distanciel</small>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col col-3 align-self-center">
-                        <img style="max-width: 130px;" class="w-100" src="{{ asset('images/hybrid_128.png') }}">
-                    </div>
-                    <div class="col">
-                        <div class="row">
-                            <div class="col">
-                                {{ form_widget(form.teachingCmHybridClass) }}
-                                <label placeholder="Heures CM"></label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                {{ form_widget(form.teachingTdHybridClass) }}
-                                <label placeholder="Heures TD"></label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                {{ form_widget(form.teachingTpHybridClass) }}
-                                <label placeholder="Heures TP"></label>
-                            </div>
-                        </div>
-                        {{ form_errors(form.teachingOtherTypeHybridClass) }}
-                        <div class="row">
-                            <div class="col pr-1">
-                                {{ form_widget(form.teachingOtherHybridClass) }}
-                                <label placeholder="Heures autre"></label>
-                            </div>
-                            <div class="col pl-1">
-                                {{ form_widget(form.teachingOtherTypeHybridClass) }}
-                                <label placeholder="Type"></label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="row">
-                            <div class="col">
-                                {{ form_widget(form.teachingCmHybridDist) }}
-                                <label placeholder="Heures CM"></label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                {{ form_widget(form.teachingTdHybridDist) }}
-                                <label placeholder="Heures TD"></label>
-                            </div>
-                        </div>
-                        {{ form_errors(form.teachingOtherTypeHybridDistant) }}
-                        <div class="row">
-                            <div class="col pr-1">
-                                {{ form_widget(form.teachingOtherHybridDist) }}
-                                <label placeholder="Heures autre"></label>
-                            </div>
-                            <div class="col pl-1">
-                                {{ form_widget(form.teachingOtherTypeHybridDistant) }}
-                                <label placeholder="Type"></label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-5 border-right">
-                <div class="row">
-                    <div class="col-5">
-                        <h6>{{ form_widget(form.teachingMode.children[2]) }}</h6>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col col-4 align-self-center">
-                        <img style="max-width: 130px;" class="w-100" src="{{ asset('images/in_class_128.png') }}">
-                    </div>
-                    <div class="col">
-                        <div class="row">
-                            <div class="col">
-                                {{ form_widget(form.teachingCmDist) }}
-                                <label placeholder="Heures CM"></label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                {{ form_widget(form.teachingTdDist) }}
-                                <label placeholder="Heures TD"></label>
-                            </div>
-                        </div>
-                        {{ form_errors(form.teachingOtherTypeDist) }}
-                        <div class="row">
-                            <div class="col pr-1">
-                                {{ form_widget(form.teachingOtherDist) }}
-                                <label placeholder="Heures autre"></label>
-                            </div>
-                            <div class="col pl-1">
-                                {{ form_widget(form.teachingOtherTypeDist) }}
-                                <label placeholder="Type"></label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>#}
     </div>
 </div>
 <div class="mt-2">
