--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -127,11 +127,18 @@
                 ).done(function (response) {
                     if (Syllabus.handleAjaxResponseModal(response, $modal_app_body)) {
                         $modal_app.modal('hide');
-                        $.get(view).done(function (response) {
-                            if (Syllabus.handleAjaxResponseModal(response)) {
-                                $cardBody.html(response["content"]);
-                            }
-                        })
+                        if (view)
+                        {
+                            $.get(view).done(function (response) {
+                                if (Syllabus.handleAjaxResponseModal(response)) {
+                                    $cardBody.html(response["content"]);
+                                }
+                            })
+                        }
+                        else
+                        {
+                            
+                        }
                     }
                 });
             });
