--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -137,7 +137,7 @@
                         }
                         else
                         {
-                            
+                            document.location.reload();
                         }
                     }
                 });
