fix objective course

--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -52,7 +52,9 @@
                     </a>
                 </li>
                 <li class="nav-item menu-tab">
-                    <a class="nav-link" href="{{ path('course_equipment', { 'id': courseInfo.id }) }}">
+                    <a class="nav-link"
+                       id="menu-resource"
+                       href="{{ path('course_equipment', { 'id': courseInfo.id }) }}">
                         <i>5</i>&nbsp;
                         <p>Matériel et ressources</p>
                     </a>
