--- a/app/Resources/views/course_info/equipment/equipment.html.twig
+++ b/app/Resources/views/course_info/equipment/equipment.html.twig
@@ -3,6 +3,19 @@
 {% block subContent %}
 
     <div class="card my-2 shadow card-syllabus"
+         data-view-url="{{ path('course_equipment_equipment_view', {'id': courseInfo.id }) }}"
+    >
+        <div class="card-header">
+            <div class="d-flex justify-content-between">
+                <h3>Matériel</h3>
+            </div>
+        </div>
+        <div class="card-body">
+        </div>
+    </div>
+
+
+    <div class="card my-2 shadow card-syllabus"
          data-view-url="{{ path('course_equipment_resource_view', {'id': courseInfo.id }) }}"
          data-form-url="{{ path('course_equipment_resource_form', {'id': courseInfo.id }) }}"
     >
@@ -24,8 +37,8 @@
     {{ parent() }}
     <script>
         $(document).ready(function () {
-            $('#menu-closing_remarks').addClass('active');
-            $('#menu-closing_remarks').addClass('border-bottom-3 border-white');
+            $('#menu-resource').addClass('active');
+            $('#menu-resource').addClass('border-bottom-3 border-white');
         });
     </script>
 {% endblock %}
