Use large and small logo in sidebar

--- a/app/Resources/views/base_layout.html.twig
+++ b/app/Resources/views/base_layout.html.twig
@@ -4,10 +4,9 @@
         {% block navbar %}{% endblock %}
     </nav>
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
-        <a href="{{ logoHref|default('#') }}" class="brand-link elevation-4">
-            <span class="brand-text">
-                <img src="{{ asset('images/uca-logo-dark.png') }}" alt="logo" class="brand-image elevation-3" style="opacity: .8">
-            </span>
+        <a href="{{ logoHref|default('#') }}" class="brand-link elevation-4 logo-switch">
+            <img src="{{ asset('images/uca-logo-dark-small.png') }}" alt="Logo Syllabus" class="brand-image-xs logo-xs">
+            <img src="{{ asset('images/uca-logo-dark.png') }}" alt="Logo Syllabus" class="brand-image-xl logo-xl">
         </a>
         {% block sidebar %}{% endblock %}
     </aside>
