--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -57,7 +57,7 @@
                     <a class="nav-link"
                        id="menu-resource"
                        href="{{ path('course_equipment', { 'id': courseInfo.id }) }}">
-                        <i>5</i>&nbsp;
+                        <i class="fas fa-tools"></i>
                         <p>Matériel et ressources</p>
                     </a>
                 </li>
