main sidebar fixed

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -28,7 +28,7 @@
     {% endblock %}
 </head>
 
-<body class="sidebar-mini layout-navbar-fixed control-sidebar-slide-open">
+<body class="sidebar-mini layout-navbar-fixed layout-fixed control-sidebar-slide-open">
 {% block modals %}{% endblock %}
 <div class="container-loader">
     <div class="loader">
