--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -38,9 +38,9 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link menu-tab" id="menu-objective"
-                       href="{{ path('course_info_objectives', { 'id': courseInfo.id }) }}"
-                       id="menu-objectives_course">
+                    <a class="nav-link menu-tab"
+                       id="menu-objectives"
+                       href="{{ path('course_info_objectives', { 'id': courseInfo.id }) }}">
                         <i class="fas fa-bullseye"></i>
                         <p>Objectifs du cours</p>
                     </a>
