--- a/app/Resources/views/course_info/objectives_course/form/prerequisite.html.twig
+++ b/app/Resources/views/course_info/objectives_course/form/prerequisite.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('objective_course_prerequisite', {'id': courseInfo.id })}}) }}
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('objective_course_prerequisite', {'id': courseInfo.id }), 'data-card': 'card-prerequisite'}}) }}
 <div class="card border-primary card-syllabus toggle-focus my-2 shadow active">
     {{ form_start(form, {'attr': {'class': 'form-focus'}}) }}
     <div class="card-header">
