--- a/app/Resources/views/course_info/objectives_course/form/remove_tutoring_resources.html.twig
+++ b/app/Resources/views/course_info/objectives_course/form/remove_tutoring_resources.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('objective_course_remove_tutoring_resources', {'id': courseInfo.id, 'tutoringResourcesId': form.vars.data.id}) }}) }}
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('objective_course_remove_tutoring_resources', {'id': courseInfo.id, 'tutoringResourcesId': form.vars.data.id}), 'data-card': 'card-tutoring-resources' }}) }}
 {{ form_errors(form) }}
 <h5>Êtes-vous sûr(e) de vouloir supprimer la remédiation "{{ form.vars.data.description }}" ?</h5>
 <div class="d-flex justify-content-center">
