--- a/app/Resources/views/course_info/objectives_course/objectives_course.html.twig
+++ b/app/Resources/views/course_info/objectives_course/objectives_course.html.twig
@@ -2,7 +2,7 @@
 
 {% block subContent %}
 
-    <div class="card my-2 shadow card-syllabus"
+    <div id="card-achievement" class="card my-2 shadow card-syllabus"
          data-view-url="{{ path('objective_course_achievement_view', {'id': courseInfo.id }) }}"
     >
         <div class="card-header">
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <div class="card my-2 shadow card-syllabus"
+    <div id="card-prerequisite" class="card my-2 shadow card-syllabus"
          data-view-url="{{ path('objective_course_prerequisite_view', {'id': courseInfo.id }) }}"
     >
         <div class="card-header">
@@ -39,14 +39,15 @@
         </div>
     </div>
 
-    <div class="card my-2 shadow card-syllabus"
+    <div id="card-tutoring-resources" class="card my-2 shadow card-syllabus"
          data-view-url="{{ path('objective_course_tutoring_resources_view', {'id': courseInfo.id }) }}"
     >
         <div class="card-header">
             <div class="d-flex justify-content-between">
                 <h3>Remédiation / aide à la réussite</h3>
-                <button type="button" class="btn btn-primary modal-action rounded"
+                <button type="button" class="btn btn-primary modal-action rounded "
                         data-action-title="Ajouter un enseignant"
+                        data-card="card-tutoring-resources"
                         data-action-url="{{ path('objective_course_tutoring_resources', {'id': courseInfo.id }) }}">
                     Ajouter une remédiation
                 </button>
@@ -98,7 +99,6 @@
                     method: "POST",
                     dataType: "html",
                     success: function (data) {
-                        window.location.reload()
                     }
                 });
             })
