--- a/app/Resources/views/course_info/admin/index.html.twig
+++ b/app/Resources/views/course_info/admin/index.html.twig
@@ -51,7 +51,14 @@
                     <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app_admin_course_info_index')  }}">Réinitialiser les filtres</a>
                 </div>
                 <div class="col-md-2 col-sm-6">
-                    <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin_course_info_duplicate_syllabus_from_file')  }}">Dupliquer syllabus en masse</a>
+                    <div class="btn-group">
+                        <button type="button" style="margin-top: 32px" class="btn btn-primary dropdown-toggle dropdown-icon" data-toggle="dropdown">Actions
+                        </button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="{{  path('app_admin_course_info_new')  }}">Ajouter un syllabus</a>
+                            <a class="dropdown-item" href="{{  path('app_admin_course_info_duplicate_syllabus_from_file')  }}">Dupliquer syllabus en masse</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <input type="submit" style="position: absolute; left: -9999px"/>
